# membria-cli

./: .gitignore  ACTION_PLAN.md  ANTIPATTERN_DETECTOR_ANALYSIS.md  CLAUDE_QUICKSTART.md  CODE_MAP.md  DEPLOYMENT_STATUS.md  DESIGN_IMPROVEMENTS.md  Decision-Extractor.md  FALKORDB_SCHEMA.md  FINAL_BUILD_REPORT.md  GRID_LAYOUT_MIGRATION.md  MCP_DESKTOP_STATUS.md  MCP_PROTOCOL_SPECIFICATION.md  MENUS_IMPLEMENTATION.md  MENUS_QUICK_REFERENCE.md  MENUS_VISUAL_EXAMPLES.md  Membria_SuperAgent_CLI.md  ONBOARDING_IMPLEMENTATION_COMPLETE.md  ONBOARDING_INTEGRATION.md  ONBOARDING_QUICK_REFERENCE.md  ONBOARDING_SUMMARY.md  ONBOARDING_TESTING.md  ONBOARDING_VISUAL_GUIDE.md  PHASE1_UI_COMPLETE.md  PHASE1_UI_SUMMARY.md  PHASE2_STATUS.md  PLAN_MODE_INTEGRATION.md  PROVIDER_MANAGEMENT.md  PROVIDER_MANAGEMENT_EXAMPLES.py  README.md  SHELL_BUGFIX_COMPLETE.md  SKILLS_ARCHITECTURE_RESEARCH.md  SKILLS_ARCHITECTURE_SPECIFICATION.md  SKILLS_PIPELINE_DIAGRAMS.md  SKILLS_QUICK_REFERENCE.md  SKILLS_RESEARCH_INDEX.md  TUI_THEME_AUDIT.md  UI_IMPLEMENTATION_COMPLETE.md  UI_LAYOUT.md  UI_MENUS.md  (+15 more)
backend/: .env  .env.example  create_db.sql  deploy.sh  ecosystem.config.js  membria-crawler.md  package-lock.json  package.json  pattern-detector.md  test_connect.js  test_env.js  test_env2.js  test_export.js  test_path.js  test_pool.js
crawler/: package.json
docs/: ARCHITECTURE_INVENTORY.md  CLI_ONBOARDING_AND_COMPETITORS.md  CLI_QUICKSTART_RU.md  CONNECT_COMMAND_ARCHITECTURE.md  COUNCIL_SQUAD_INTEGRATION.md  INTERACTIVE_CLI_SPEC.md  MCP_ALLOWLIST.example.json  MCP_DOC_FIRST.md  MEMORY_LOOP.md  README.md  (+11 more)
(+224 files in other folders)
