[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "membria"
version = "0.1.0"
description = "Membria CLI - AI-powered decision memory for developers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Membria Team"}
]
keywords = ["ai", "cli", "decision-making", "reasoning-graph", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.13",
    "rich>=13.0.0",
    "falkordb>=1.0.0",
    "aiosqlite>=0.19.0",
    "gitpython>=3.1.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[project.scripts]
membria = "membria.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/membria"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py311"]
